--- a/css/main.css
+++ b/css/main.css
@@ -575,3 +575,182 @@ a {
 	letter-spacing: 0.14em;
 	text-transform: uppercase;
 }
+
+/* ------ Media Queries ------ */
+
+/* 768-992px */
+@media screen and (max-width: 992px) {
+	.container {
+		width: 700px;
+	}
+	.info {
+		flex-direction: column;
+		align-items: center;
+	}
+	.nav {
+		-webkit-flex-wrap: wrap;
+		-moz-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		-o-flex-wrap: wrap;
+		flex-wrap: wrap;
+	}
+	.menu__item {
+		margin-right: 30px;
+	}
+	.intro {
+		text-align: center;
+		margin: 150px 0;
+	}
+	.desc {
+		width: 460px;
+	}
+	.skills-list {
+	    flex-wrap: wrap;
+		width: 550px;
+		margin: 65px 30px 65px 110px;
+	}
+	.skills {
+		padding-bottom: 0;
+	}
+	.skills-list__item {
+		margin-bottom: 30px;
+	}
+	.work-list {
+	    flex-direction: column;
+	    align-items: center;
+	}
+	.work-list__item {
+    	margin-bottom: 50px;
+	}
+	.work-list__pic {
+		width: 450px;
+	}
+	.work-list__name {
+		top: -20px;
+		left: 151px;
+	}
+
+	.work-list__link {
+		top: 470px;
+		left: 196px;
+	}
+	.work-list__item:focus .work-list__name,
+	.work-list__item:hover .work-list__name {
+		top: 210px;
+	}
+	.work-list__item:focus .work-list__link,
+	.work-list__item:hover .work-list__link {
+		top: 240px;
+	}
+	.work {
+		padding-bottom: 0;	
+	}
+	.rewards__title {
+		margin-top: 30px;
+	}
+	.footer {
+		padding: 60px 0;	
+	}
+}
+
+/* 576-768px */
+@media screen and (max-width: 768px) {
+	.container {
+		width: 520px;
+	}
+	.skills-list {
+	    flex-wrap: wrap;
+		width: 500px;
+		margin: 65px auto;
+	}
+	.info-mail {
+		margin-top: 10px;
+		margin-left: 12px;
+		font-size: 10px;
+	}
+}
+
+/* 320-576px */
+@media screen and (max-width: 576px) {
+	.container {
+		width: 90%;
+	}
+	.nav {
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+		-ms-align-items: center;
+		align-items: center;
+	}
+	.menu {
+		margin: 30px 0;
+		order: 1;
+	}
+	.info-mail {
+		margin-left: 0;
+	}
+	.menu__link {
+		font-size: 13px;
+	}
+	h1 {
+		font-size: 26px;
+	}
+	h2 {
+		font-size: 23px;
+	}
+	h3 {
+		font-size: 20px;
+	}
+	.intro__text {
+		font-size: 19px;
+	}
+	.rewards__items {
+		flex-direction: column;
+		-ms-align-items: center;
+		align-items: center;
+	}
+	.rewards__item {
+		margin: 10px 0;
+	}
+	.contact-wrap {
+		flex-direction: column;
+	    align-items: center;
+	}
+	.skills-list {
+		width: 90%;
+	}
+	.desc {
+		width: 90%;
+	}
+	.connect {
+		width: 90%;
+	}
+		.work-list__pic {
+		width: 300px;
+	}
+	.work-list__name {
+		top: -20px;
+	    left: 78px;
+	}
+
+	.work-list__link {
+	    top: 310px;
+	    left: 121px;
+	}
+	.work-list__item:focus .work-list__name,
+	.work-list__item:hover .work-list__name {
+		top: 125px;
+	}
+	.work-list__item:focus .work-list__link,
+	.work-list__item:hover .work-list__link {
+		top: 152px;
+	}
+	.write {
+		margin-top: 25px;
+	}
+	.footer {
+		padding: 30px 0;	
+	}
+}
