--- a/css/main.css
+++ b/css/main.css
@@ -616,37 +616,23 @@ a {
 		margin-bottom: 30px;
 	}
 	.work-list {
-	    flex-direction: column;
-	    align-items: center;
+		justify-content: space-around;
+		flex-wrap: wrap;
 	}
 	.work-list__item {
-    	margin-bottom: 50px;
-	}
-	.work-list__pic {
-		width: 450px;
-	}
-	.work-list__name {
-		top: -20px;
-		left: 151px;
-	}
-
-	.work-list__link {
-		top: 470px;
-		left: 196px;
-	}
-	.work-list__item:focus .work-list__name,
-	.work-list__item:hover .work-list__name {
-		top: 210px;
-	}
-	.work-list__item:focus .work-list__link,
-	.work-list__item:hover .work-list__link {
-		top: 240px;
+		margin-bottom: 40px;
 	}
 	.work {
 		padding-bottom: 0;	
 	}
 	.rewards__title {
 		margin-top: 30px;
+	}
+	.rewards__items {
+		justify-content: space-between;
+	}
+	.rewards__item {
+		margin: 0;
 	}
 	.footer {
 		padding: 60px 0;	
@@ -663,10 +649,14 @@ a {
 		width: 500px;
 		margin: 65px auto;
 	}
+	.nav {
+		justify-content: center;
+	}
 	.info-mail {
-		margin-top: 10px;
-		margin-left: 12px;
-		font-size: 10px;
+		display: none;
+	}
+	.menu {
+		display: none;
 	}
 }
 
@@ -675,36 +665,11 @@ a {
 	.container {
 		width: 90%;
 	}
-	.nav {
-		-webkit-flex-direction: column;
-		-moz-flex-direction: column;
-		-ms-flex-direction: column;
-		-o-flex-direction: column;
-		flex-direction: column;
-		-ms-align-items: center;
-		align-items: center;
-	}
-	.menu {
-		margin: 30px 0;
-		order: 1;
-	}
-	.info-mail {
-		margin-left: 0;
-	}
-	.menu__link {
-		font-size: 13px;
-	}
 	h1 {
-		font-size: 26px;
-	}
-	h2 {
-		font-size: 23px;
-	}
-	h3 {
-		font-size: 20px;
+		font-size: 45px;
 	}
 	.intro__text {
-		font-size: 19px;
+		font-size: 25px;
 	}
 	.rewards__items {
 		flex-direction: column;
@@ -721,31 +686,14 @@ a {
 	.skills-list {
 		width: 90%;
 	}
+	.skills-list__item {
+		margin: 15px auto;
+	}
 	.desc {
 		width: 90%;
 	}
 	.connect {
 		width: 90%;
-	}
-		.work-list__pic {
-		width: 300px;
-	}
-	.work-list__name {
-		top: -20px;
-	    left: 78px;
-	}
-
-	.work-list__link {
-	    top: 310px;
-	    left: 121px;
-	}
-	.work-list__item:focus .work-list__name,
-	.work-list__item:hover .work-list__name {
-		top: 125px;
-	}
-	.work-list__item:focus .work-list__link,
-	.work-list__item:hover .work-list__link {
-		top: 152px;
 	}
 	.write {
 		margin-top: 25px;
