--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 	color: #5f6c84;
 	font-family: sans-serif;
-	background: #e0e0e0;
+	background: #5f5f5f;
 	font-size: 15px;
 	letter-spacing: 0.02em;
 }
@@ -73,7 +73,7 @@ a {
 }
 
 .container {
-	width: 940px;
+	width: 500px;
 	margin: 0 auto;	
 }
 
@@ -108,8 +108,11 @@ a {
 }
 
 .sites {
-	max-width: 400px;
-	margin: 0 auto;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 50px 30px 40px 50px;
+    background: #d1d1d1;
+    clip-path: polygon(0px 20%, 100% -85%, 100% 80%, 0 185%);
 }
 
 a {
