--- a/dz11/css/main.css
+++ b/dz11/css/main.css
@@ -2,6 +2,7 @@
 
 @font-face {
   font-family: 'Museo Sans 100';
+  font-display: auto;
   src: url('../fonts/MuseoSansCyrl-100.eot'); /* IE9 Compat Modes */
   src: url('../fonts/MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/MuseoSansCyrl-100.woff2') format('woff2'), /* Super Modern Browsers */
@@ -12,6 +13,7 @@
 
 @font-face {
   font-family: 'Museo Sans 300';
+  font-display: auto;
   src: url('../fonts/MuseoSansCyrl-300.eot'); /* IE9 Compat Modes */
   src: url('../fonts/MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/MuseoSansCyrl-300.woff2') format('woff2'), /* Super Modern Browsers */
@@ -22,6 +24,7 @@
 
 @font-face {
   font-family: 'Museo Sans 700';
+  font-display: auto;
   src: url('../fonts/MuseoSansCyrl-700.eot'); /* IE9 Compat Modes */
   src: url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/MuseoSansCyrl-700.woff2') format('woff2'), /* Super Modern Browsers */
@@ -29,6 +32,7 @@
        url('../fonts/MuseoSansCyrl-700.ttf')  format('truetype'), /* Safari, Android, iOS */
        url('../fonts/MuseoSansCyrl-700.svg#Natasha') format('svg'); /* Legacy iOS */
 }
+
 
 /* ----- Specification ----- */
 
