--- a/dz11/css/media.css
+++ b/dz11/css/media.css
@@ -47,10 +47,40 @@
 		background-size: cover;
 		background-position: left center;
 	}
+	.nav {
+		display: none;
+		position: absolute;
+		width: 160px;
+	    right: 20px;
+    	top: 58px;
+    	background: #e5e6e8;
+	    box-shadow: 0 0 0 4px rgba(88, 100, 122, 0.086);
+	    padding: 10px;
+	    z-index: 5;
+	}
+	.menu {
+		flex-direction: column;
+		margin: 0;
+	}
+	.nav__btn {
+		display: block;
+	}
+	.menu__item {
+		text-align: center;
+	}
 }
 
 /* 576 - 768 px */
 @media screen and (max-width: 768px) {
+	.logo {
+		width: 100%;
+		height: 67px;
+		background-position: left center;
+	}
+	.nav {
+    	top: 53px;
+    	right: 10px;
+	}
 	.logo-footer {
 		margin: 40px auto 0;
 	}
@@ -70,14 +100,11 @@
 	h4 {
 		font-size: 20px;
 	}
+	.invite {
+		margin-top: -110px;
+	}
 	.invite__text {
 		font-size: 25px;
-	}
-	.logo {
-		width: 100%;
-		height: 47px;
-		background-size: 100%;
-		background-position: left center;
 	}
 	.invite__text {
 		width: 90%;
@@ -121,5 +148,12 @@
 	.footer__text,
 	.copy {
 		text-align: center;
+	}
+	.nav__btn {
+		margin-left: auto;
+	}
+	.nav {
+    	top: 25px;
+    	right: 15px;
 	}
 }
